test/org/midica/testfiles/failing/zero-in-summand.midica
INCLUDE inc/instruments.midica

0 - /4+-+/8
